# RobotGame

./: .cproject  .gitignore  .project  AGENTS.md  CMakeLists.txt  CannonPosEvent.cpp  CannonPosEvent.h  CannonShell.cpp  CannonShell.h  Explosion.cpp  Explosion.h  Logger.cpp  Logger.h  README.md  RobCtrl.cpp  RobCtrl.h  RobEvent.h  Robot.cpp  Robot.h  RobotDataEvent.cpp  RobotDataEvent.h  RobotGame.cpp  RobotPosEvent.cpp  RobotPosEvent.h  RobotTickEvent.cpp  RobotTickEvent.h  RobotTypes.h  STANDALONE_BUILD_GUIDE.md  Scheduler.cpp  Scheduler.h  ShellPool.cpp  ShellPool.h  Trigonometry.cpp  Trigonometry.h  Vector2.h  Viewer.cpp  Viewer.h  safequeue.h
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
Robots/EdgePatrol/: CMakeLists.txt  EdgePatrol.cpp  EdgePatrol.h  Makefile
Robots/EdgeRobot/: CMakeLists.txt  EdgeRobot.cpp  EdgeRobot.h
Robots/Runner/: .cproject  .project  CMakeLists.txt  Runner.cpp  Runner.h
Robots/Scanner/: .project  CMakeLists.txt  Scanner.cpp  Scanner.h
docs/dev-kit/: MyRobot.cpp  README.md  ROBOT_RULES.md
openspec/changes/archive/2026-03-06-fix-single-step-viewing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-06-fix-single-step-viewing/specs/step-mode-frozen-display/: spec.md
openspec/changes/archive/2026-03-06-step-mode-execution/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-06-step-mode-execution/specs/step-mode/: spec.md
openspec/changes/archive/2026-03-09-fix-robot-color-mismatch/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-09-fix-robot-id-stability/: design.md  proposal.md  tasks.md
openspec/changes/step-mode-execution/: tasks.md
openspec/specs/robot-color-consistency/: spec.md
openspec/specs/stable-robot-identity/: spec.md
openspec/specs/step-mode-frozen-display/: spec.md
scripts/: create-dev-kit.sh
specs/001-developer-package/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-developer-package/checklists/: requirements.md
specs/001-developer-package/contracts/: script-interface.md
specs/001-edge-patrol-robot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-edge-patrol-robot/checklists/: requirements.md
specs/001-edge-patrol-robot/contracts/: README.md
specs/001-edge-robot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-edge-robot/checklists/: implementation.md  planning.md  requirements.md
specs/001-edge-robot/contracts/: robot-api.md
specs/001-fix-robot-bugs/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fix-robot-bugs/checklists/: requirements.md
specs/001-fix-robot-bugs/contracts/: component-contracts.md
specs/001-fix-undefined-symbols/: IMPLEMENTATION_NOTES.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fix-undefined-symbols/checklists/: requirements.md
specs/001-fix-undefined-symbols/contracts/: README.md  robot-plugin-api.md
specs/001-graphics-fixes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-graphics-fixes/checklists/: requirements.md
specs/001-graphics-fixes/contracts/: cli.md  scheduler.md  viewer.md
specs/001-robot-colors-dead-state/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-robot-colors-dead-state/checklists/: requirements.md
specs/001-robot-colors-dead-state/contracts/: shellpool-interface.md  viewer-interface.md
